main.css
/* 
#show{
display:flex;
justify-content:center;
align-items:center;
} */


/* #show{
    position:absolute;
    left:50%;
    top:50%;
    transform:translate(-50% -50%);
} */

body {
    font-family: Arial, Helvetica, sans-serif
}

#word {
    font-size: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
}
#subword {
    font-size: 12px;
    display: flex;
    justify-content: center;
    align-items: center;

}
#show {
    display: flex;
    justify-content: center;
    align-items: center;
    
}

